kube/ingresses/uat-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: uat
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/group.name: shared-frontend
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:629585638563:certificate/7c1a12a4-38e3-4905-988a-e8d561784177
spec:
  ingressClassName: alb
  rules:
    - host: uat.pauldoestech.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 443
